extracted_vulnerabilities/pair_198449_274814/vuln_report.txt
extracted_vulnerabilities/pair_198449_274814/stun_simple_vuln.c:1:1: error: There is an unknown macro here somewhere. Configuration is required. If PJ_DEF is a macro then please configure it. [unknownMacro]
PJ_DEF(pj_status_t) pjstun_parse_msg( void *buf, pj_size_t buf_len,
^
nofile:0:0: information: Active checkers: There was critical errors (use --checkers-report=<filename> to see details) [checkersReport]

